Bug 162341 - Kopete crashes on some themes
Summary: Kopete crashes on some themes
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Chatwindow Styles (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-20 04:51 UTC by Eduard Sukharev
Modified: 2008-12-29 16:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eduard Sukharev 2008-05-20 04:51:16 UTC
Version:           0.50.50 (using 4.00.74 (KDE 4.0.73 >= 20080515, compiled sources)
Compiler:          cl.exe
OS:                Microsoft Windows (i686) release 5.1 (XP Professional)

I've downloaded some themes for kopete in KDE4 on my WinXP. These themes previewed normally in khotnewstuff in kopete. But when i try to select some of them, kopete crashes on attempt to mae a preview in it's preview window.
Themes like 'squareblue' and 'stayblue0.3' crashes, when others like 'TributeToQip', 'Fresh n Clean' and all the default themes are ok.
This happens on KDE4 on Windows XP in kopete of every release (now i'm using 0.74 but the same was for earlier releases).
Comment 1 Dennis Nienhüser 2008-05-20 10:51:12 UTC
Both squareblue and stayblue work ok here for the Kopete versions coming with KDE 4.0.4 and SVN trunk (4.0.74) on Linux -- might be a windows specific problem.
Can you generate a backtrace on windows?
Comment 2 Eduard Sukharev 2008-05-20 15:46:59 UTC
Maybe =)
What do i need to download? I suppose i can't backtrace application just like that, so could you name packages, or give links to them or provide me with step-by-step instruction?
Comment 3 Dennis Nienhüser 2008-05-23 12:52:19 UTC
You need packages compiled with debug symbols and AFAIK some development environment. The former currently means compiling yourself, as the current binaries are built without debug info. There's a guide on techbase, but it'll take some time to set everything up.

Confirming the bug as it happened to me as well when trying the windows binaries.
Comment 4 Eduard Sukharev 2008-05-23 14:07:36 UTC
I can't compile it myself - not my level.
But for debugging - on KDE-windows irc channel someone supposed to use DebugView utility from Microsoft. But it shows nothing after clicking the "broken" theme. It shows something on entering 'Configuration' dialog and another "something" on choosing 'Chat window' page on the left, though.
Comment 5 Eduard Sukharev 2008-05-24 18:28:34 UTC
I've managaed to find the root of this bug (or at least i think so).
If you select the flawed theme in preview window of Kopete settings - kopete just crashes. Well, if you see the %theme_dir%/Contents/Resources/ you'll find 2-3 folders and files named main.css, Footer.html, Header.html, Status.html. So, all the 'normal' themes have empty 'Header.html' file, while the flawed ones have some HTML code in them. It's different, but it's there. Well, if you try to replace it with the blank Header.html - theme doesn't cause crash in preview window (though, the preview itself, of course, differs from what authot wanted it to look like).
I haven't tested if some particular code causes this behaviour, or any presence af any code at all.
Comment 6 Dominik Tritscher 2008-07-23 09:39:21 UTC
I can confirm that bug with kopete 0.50.80 on Windows Server 2003. As I don't have the capacity in my VM to compile stuff myself, I can't provide backtraces.
Comment 7 Christian Ehrlicher 2008-12-29 16:49:59 UTC
SVN commit 902977 by chehrlic:

strftime on windows does not support %e (and maybe others too - did not check) which leads to a crash

BUG: 162341

 M  +8 -2      chatmessagepart.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=902977