strftime on windows does not support %e (and maybe others too - did not check) which leads to a crash

BUG: 162341

svn path=/trunk/KDE/kdenetwork/kopete/; revision=902977